libs/config/tests/errors/arrays/stdout.ansi
[31m[CE6] Error:[0m property was expected to be an array
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mn[0m[38;5;249mo[0m[38;5;249mt[0m[38;5;249m_[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mr[0m[38;5;249ma[0m[38;5;249my[0m[38;5;155m[[0m[38;5;155m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;201m"[0m[38;5;201mh[0m[38;5;201me[0m[38;5;201ml[0m[38;5;201ml[0m[38;5;201mo[0m[38;5;201m"[0m[38;5;249m;[0m
 [38;5;240m  │[0m          [38;5;155m─[0m[38;5;155m┬[0m   [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m           [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m `[38;5;155m[][0m` indicates an upcoming array
 [38;5;240m  │[0m                  [38;5;201m│[0m     
 [38;5;240m  │[0m                  [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m expected array
[38;5;246m───╯[0m

[31m[CE5] Error:[0m property was not expected to be an array
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:2:9[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;155ma[0m[38;5;155mr[0m[38;5;155mr[0m[38;5;155ma[0m[38;5;155my[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;201m{[0m[38;5;201m1[0m[38;5;201m,[0m[38;5;201m2[0m[38;5;201m,[0m[38;5;201m3[0m[38;5;201m}[0m[38;5;249m;[0m
 [38;5;240m  │[0m [38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m[38;5;155m─[0m   [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m   [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m expected `[38;5;155marray[][0m` here
 [38;5;240m  │[0m            [38;5;201m│[0m     
 [38;5;240m  │[0m            [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m unexpected array
[38;5;246m───╯[0m
